adding sub-title to setup notebook

--- a/00-setup_environment.ipynb
+++ b/00-setup_environment.ipynb
@@ -34,6 +34,8 @@
    "id": "be755083-73cf-48b0-8d2f-06769d176503",
    "metadata": {},
    "source": [
+    "# Environment Setup\n",
+    "\n",
     "#### Run the pip commands below to install all needed packages\n",
     "Ensure the boto3 version printed below is **1.39.3** or higher."
    ]
