removing unused libraries from pip install

--- a/01-biomarker_database_analyst_strands.ipynb
+++ b/01-biomarker_database_analyst_strands.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install strands-agents strands-agents-tools boto3 requests --quiet"
+    "%pip install strands-agents strands-agents-tools --quiet"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "#### Ensure the latest version of boto3 is shown below\n",
-    "Ensure the boto3 version printed below is **1.39.3** or higher."
+    "Ensure the boto3 version printed below is **1.37.1** or higher."
    ]
   },
   {
@@ -68,16 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02662ed8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.magic_helper import register_cell_magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ae4b0cf3-76bf-4287-9b40-cc14566ebf8b",
    "metadata": {
     "execution": {
@@ -91,8 +81,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run biomarker_agent.py\n",
-    "\n",
     "import boto3\n",
     "import json\n",
     "import time\n",
@@ -143,8 +131,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a biomarker_agent.py\n",
-    "\n",
     "# Initialize AWS clients\n",
     "bedrock_client = boto3.client('bedrock-runtime', region_name=region)\n",
     "redshift_client = boto3.client('redshift-data')\n",
@@ -187,8 +173,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a biomarker_agent.py\n",
-    "\n",
     "biomarker_agent_name = 'Biomarker-database-analyst-strands'\n",
     "biomarker_agent_description = \"biomarker query engine with redshift using Strands framework\"\n",
     "biomarker_agent_instruction = \"\"\"\n",
@@ -244,8 +228,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a biomarker_agent.py\n",
-    "\n",
     "def extract_table_columns(query):\n",
     "    table_columns = defaultdict(list)\n",
     "    for record in query[\"Records\"]:\n",
@@ -475,8 +457,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a biomarker_agent.py\n",
-    "\n",
     "# Create Bedrock model for Strands\n",
     "model = BedrockModel(\n",
     "    model_id=\"anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
