--- a/02-clinical_evidence_researcher_strands.ipynb
+++ b/02-clinical_evidence_researcher_strands.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install strands-agents strands-agents-tools boto3 requests xmltodict --quiet"
+    "%pip install strands-agents strands-agents-tools xmltodict --quiet"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "#### Ensure the latest version of boto3 is shown below\n",
-    "Ensure the boto3 version printed below is **1.39.3** or higher."
+    "Ensure the boto3 version printed below is **1.37.1** or higher."
    ]
   },
   {
@@ -68,16 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9244da2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.magic_helper import register_cell_magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ae4b0cf3-76bf-4287-9b40-cc14566ebf8b",
    "metadata": {
     "execution": {
@@ -91,8 +81,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run clinical_research_agent.py\n",
-    "\n",
     "import os\n",
     "import boto3\n",
     "import json\n",
@@ -150,8 +138,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a clinical_research_agent.py\n",
-    "\n",
     "# Initialize AWS clients\n",
     "bedrock_client = boto3.client('bedrock-runtime', region_name=region)\n",
     "bedrock_agent_client = boto3.client(\"bedrock-agent\", region_name=region)\n",
@@ -183,8 +169,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a clinical_research_agent.py\n",
-    "\n",
     "# Find the Knowledge Base\n",
     "response = bedrock_agent_client.list_knowledge_bases()\n",
     "\n",
@@ -240,8 +224,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a clinical_research_agent.py\n",
-    "\n",
     "clinical_research_agent_name = \"Clinical-evidence-researcher-strands\"\n",
     "clinical_research_agent_description = \"Research internal and external evidence using Strands framework\"\n",
     "clinical_research_agent_instruction = \"\"\"You are a medical research assistant AI specialized in summarizing internal and external \n",
@@ -291,8 +273,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a clinical_research_agent.py\n",
-    "\n",
     "# Define the tools using Strands @tool decorator\n",
     "@tool\n",
     "def query_pubmed(query: str) -> str:\n",
@@ -342,8 +322,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a clinical_research_agent.py\n",
-    "\n",
     "# Create Bedrock model for Strands\n",
     "model = BedrockModel(\n",
     "    model_id=\"anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
