--- a/03-medical_imaging_strands.ipynb
+++ b/03-medical_imaging_strands.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install strands-agents strands-agents-tools boto3 requests --quiet"
+    "%pip install strands-agents strands-agents-tools --quiet"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "#### Ensure the latest version of boto3 is shown below\n",
-    "Ensure the boto3 version printed below is **1.39.3** or higher."
+    "Ensure the boto3 version printed below is **1.37.1** or higher."
    ]
   },
   {
@@ -61,16 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17391af9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.magic_helper import register_cell_magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ae4b0cf3-76bf-4287-9b40-cc14566ebf8b",
    "metadata": {
     "execution": {
@@ -84,8 +74,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run medical_imaging_agent.py\n",
-    "\n",
     "import boto3\n",
     "import json\n",
     "import uuid\n",
@@ -136,8 +124,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a medical_imaging_agent.py\n",
-    "\n",
     "# Lambda function configuration (reusing existing infrastructure)\n",
     "medical_imaging_lambda_function_name = \"imaging-biomarker-lambda\"  # Change if different in your account\n",
     "medical_imaging_lambda_function_arn = f\"arn:aws:lambda:{region}:{account_id}:function:{medical_imaging_lambda_function_name}\"\n",
@@ -185,8 +171,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a medical_imaging_agent.py\n",
-    "\n",
     "medical_imaging_agent_name = 'Medical-imaging-expert-strands'\n",
     "medical_imaging_agent_description = \"CT scan analysis using Strands framework\"\n",
     "medical_imaging_agent_instruction = \"\"\"\n",
@@ -232,8 +216,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a medical_imaging_agent.py\n",
-    "\n",
     "def invoke_lambda_function(operation: str, payload: Dict[str, Any] = None) -> Dict[str, Any]:\n",
     "    \"\"\"\n",
     "    Helper function to invoke the existing Lambda function with Bedrock Agent compatible event structure\n",
@@ -380,8 +362,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a medical_imaging_agent.py\n",
-    "\n",
     "# Create Bedrock model for Strands\n",
     "model = BedrockModel(\n",
     "    model_id=\"anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
@@ -579,12 +559,6 @@
     "- `compute_imaging_biomarker`: Computes imaging biomarker features from lung CT scans\n",
     "- `analyze_imaging_biomarker`: Analyzes the imaging biomarker results"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b1026b97",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
