--- a/04-statistician_strands_notebook.ipynb
+++ b/04-statistician_strands_notebook.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install strands-agents strands-agents-tools boto3 requests --quiet"
+    "%pip install strands-agents strands-agents-tools --quiet"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "#### Ensure the latest version of boto3 is shown below\n",
-    "Ensure the boto3 version printed below is **1.39.3** or higher."
+    "Ensure the boto3 version printed below is **1.37.1** or higher."
    ]
   },
   {
@@ -61,24 +61,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326e5a42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.magic_helper import register_cell_magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ae4b0cf3-76bf-4287-9b40-cc14566ebf8b",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "%%write_and_run statistician_agent.py\n",
-    "\n",
     "import boto3\n",
     "import json\n",
     "import uuid\n",
@@ -121,8 +109,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%write_and_run -a statistician_agent.py\n",
-    "\n",
     "# Lambda function configurations (reusing existing infrastructure)\n",
     "bar_chart_lambda_function_name = \"MatPlotBarChartLambda\"  # Change if different in your account\n",
     "scientific_plot_lambda_function_name = \"ScientificPlotLambda\"  # Change if different in your account\n",
@@ -168,8 +154,6 @@
    },
    "outputs": [],
    "source": [
-    "%%write_and_run -a statistician_agent.py\n",
-    "\n",
     "statistician_agent_name = 'Statistician-strands'\n",
     "statistician_agent_description = \"scientific analysis for survival analysis using Strands framework\"\n",
     "statistician_agent_instruction = \"\"\"You are a medical research assistant AI specialized in survival analysis with biomarkers. \n",
@@ -219,8 +203,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%write_and_run -a statistician_agent.py\n",
-    "\n",
     "def invoke_lambda_function(function_arn: str, operation: str, payload: Dict[str, Any] = None) -> Dict[str, Any]:\n",
     "    \"\"\"\n",
     "    Helper function to invoke the existing Lambda functions with Bedrock Agent compatible event structure\n",
@@ -443,8 +425,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%write_and_run -a statistician_agent.py\n",
-    "\n",
     "# Create Bedrock model for Strands\n",
     "model = BedrockModel(\n",
     "    model_id=\"anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
