--- a/05-multi_agent_biomarker_strands.ipynb
+++ b/05-multi_agent_biomarker_strands.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install strands-agents strands-agents-tools boto3 requests --quiet"
+    "%pip install strands-agents strands-agents-tools --quiet"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "#### Ensure the latest version of boto3 is shown below\n",
-    "Ensure the boto3 version printed below is **1.39.3** or higher."
+    "Ensure the boto3 version printed below is **1.37.1** or higher."
    ]
   },
   {
@@ -481,14 +481,6 @@
    "source": [
     "### Now the Biomarker Supervisor Agent is ready to assist you!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b544b050-6d69-48a9-838f-60ac53941102",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
